--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .sliding-row{
     border: 1px solid black;
-    height:300px;
     width: 50%;
     margin: 100px auto;
 }
@@ -8,6 +7,8 @@
 .innerelems{
     border: 1px solid black;
     min-height:75px;
+    padding-left:15px;
+    padding-right:15px; 
 }
 
 .rows{
