--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 .sliding-row{
-    border: 1px solid black;
+    border: 1px solid black;    
+    margin-top:20px;
+}
+body{
     width: 50%;
     margin: 100px auto;
 }
@@ -7,8 +10,8 @@
 .innerelems{
     border: 1px solid black;
     min-height:75px;
-    padding-left:15px;
-    padding-right:15px; 
+    padding-left:0.8em;
+    padding-right:0.8em; 
 }
 
 .rows{
